login-client/infra/k8s/login-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
    spec:
      containers:
        - name: login
          image: trojan2877/login-client

---

apiVersion: v1
kind: Service
metadata:
  name: login-srv
spec:
  selector:
    app: login
  type: ClusterIP
  ports: 
    - name: login
      protocol: TCP
      port: 3000
      targetPort: 3000
